--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "htmx-todolist",
-  "module": "src/index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+	"name": "htmx-todolist",
+	"module": "src/index.ts",
+	"type": "module",
+	"scripts": {
+		"dev": "bun --hot run src/index.ts"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.10.5",
+		"bun-types": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"express": "^4.18.2"
+	}
 }
